<resources>
    <string name="app_name">EniokaScan</string>
    <string name="activity_description">Barebones scanning activity to use as-is or extend</string>
    <string name="service_description">Helper service for scanner management</string>

    <!-- Scanner status -->
    <string name="scanner_status_WAITING">Scanner is waiting for a connection</string>
    <string name="scanner_status_CONNECTING">Scanner is in the process of connecting</string>
    <string name="scanner_status_RECONNECTING">Scanner disconnected but is trying to reconnect</string>
    <string name="scanner_status_CONNECTED">Scanner has finished connecting</string>
    <string name="scanner_status_INITIALIZING">Scanner is in the process of initializing</string>
    <string name="scanner_status_INITIALIZED">Scanner has finished initializing</string>
    <string name="scanner_status_READY">Scanner is ready to scan and waiting to be used</string>
    <string name="scanner_status_SCANNING">Scanner is in the process of scanning</string>
    <string name="scanner_status_PAUSED">Scanner is enabled but not ready to scan</string>
    <string name="scanner_status_DISABLED">Scanner has been disabled and cannot be used</string>
    <string name="scanner_status_FAILURE">Scanner is no longer available after a critical error occurred</string>
    <string name="scanner_status_DISCONNECTED">Scanner disconnected and can no longer be used</string>
    <string name="scanner_status_UNKNOWN">Scanner is in an unknown status</string>
    <!-- Scanner Service status -->
    <string name="scanner_status_SERVICE_PROVIDER_SEARCH_OVER">ScannerService finished discovering scanner providers</string>
    <string name="scanner_status_SERVICE_SDK_SEARCH_NOCOMPATIBLE">There are no compatible hardware barcode scanners on this device</string>
    <string name="scanner_status_SERVICE_SDK_SEARCH_OVER">All hardware scanner providers have reported for duty</string>

    <!-- Scanner status (Others) -->
    <string name="scanner_status_no_camera">No camera available</string>

    <!-- ZBar specific -->
    <string name="scanner_camera_open_error_title">Cannot connect to camera service</string>
    <string name="scanner_camera_open_error">"Please check that no other applications (including scan helpers like ScanWedge) are using the camera. Also check if the Android camera app is working.\nApplication will now crash."</string>
    <string name="scanner_camera_no_camera">No fallback camera available on device. Please plugin your laser barcode scanner and restart application. Application will now crash.</string>

    <!-- Helper activities -->
    <string name="activity_scan_barcode_state">Scanner state</string>
    <string name="activity_scan_barcode_value_placeholder"></string>
    <string name="activity_scan_scanner_not_initialized">Scanner initialization not started</string>
    <string name="scanner_using_bt_keyboard">Using Bluetooth scanner or keyboard</string>
    <string name="activity_scan_no_compatible_sdk">There are no compatible scanners on this device</string>
    <string name="activity_scan_use_zxing">Zbar / ZXing</string>
    <string name="snack_message_zxing">Using ZXing camera reader !</string>
    <string name="snack_message_zbar">Using ZBar camera reader !</string>
    <string name="activity_scan_pause_camera">Pause</string>
    <string name="camera_mode_button">Camera</string>
    <string name="last_scan_clipboard">Last scan successfully copied to clipboard !</string>

    <!-- Helper manual scan fragment -->
    <string name="fragment_scan_manual_title">Manual input</string>
    <string name="fragment_scan_manual_invite">Please enter the barcode value, then select one item among the results</string>
    <string name="fragment_scan_manual_hint">0000000000</string>
    <string name="fragment_scan_manual_ok">Send</string>
    <string name="provider_log">Logs</string>
    <string name="provider_log_dialog_title">Provider logs</string>
    <string name="provider_log_dialog_close">Close</string>
    <string name="switch_enable_scan_text">enable scan</string>
    <string name="open_link">Open link</string>
    <string name="bug_report">Report bug</string>

    <!-- Content description -->
    <string name="fab_flashlight">flash light</string>
    <string name="fab_provider_logs">available provider logs</string>
    <string name="fab_scanner_flashlight">scanner flashlight activation</string>
    <string name="fab_scanner_bell">scanner bell activation</string>
    <string name="fab_scanner_red_light">scanner red light activation</string>
</resources>
