<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enioka.scanner.activities.ScannerCompatActivity">

    <com.enioka.scanner.sdk.camera.CameraBarcodeScanView
        android:id="@+id/camera_scan_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:forceCameraApiVersion="Auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxDistortionRatio="0.3"
        app:minResolutionY="720"
        app:maxResolutionY="1080"
        app:previewRatioMode="fillAvailableSpace"
        app:readerMode="Auto"
        app:storePreferredResolution="false"
        app:targetColorActive="@color/colorRed"
        app:targetColorPaused="@color/defaultItemColor"
        app:targetIsFixed="false"
        app:targetStrokeWidth="5"
        app:useAdaptiveResolution="true" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_camera_last_scan"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/scanner_text_last_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="none"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/activity_scan_barcode_value_placeholder"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/scanner_card_scanner_status"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/scanner_text_scanner_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/activity_scan_scanner_not_initialized"
            app:layout_constraintBottom_toBottomOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:text="@string/open_link"
        android:visibility="gone"
        app:icon="@drawable/open_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_camera_last_scan" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanner_flashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/lightbulb_off"
        app:fabCustomSize="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_camera_last_scan"
        android:contentDescription="@string/fab_flashlight" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanner_bt_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/keyboard_fill"
        app:fabCustomSize="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanner_flashlight"
        android:contentDescription="@string/fab_keyboard" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/scanner_switch_zxing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/activity_scan_use_zxing"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:thumbIcon="@drawable/camera2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scanner_switch_pause" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/scanner_switch_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/activity_scan_pause_camera"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:thumbIcon="@drawable/pause_fill"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scanner_card_scanner_status" />
</androidx.constraintlayout.widget.ConstraintLayout>
