<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/scanner_manual_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/fragment_scan_manual_invite"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scanner_manual_input_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/scanner_manual_invite"
        android:layout_centerHorizontal="true"
        android:inputType="textCapCharacters|text"
        android:hint="@string/fragment_scan_manual_hint"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/scanner_manual_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scanner_manual_invite"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <requestFocus />
        </com.google.android.material.textfield.MaterialAutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanner_manual_bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/scanner_manual_input_text_input_layout"
        android:layout_marginBottom="0px"
        android:layout_marginTop="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="0dp"
        android:paddingBottom="0px"
        android:text="@string/fragment_scan_manual_ok"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
</RelativeLayout>