<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enioka.scanner.activities.ScannerCompatActivity">

    <com.enioka.scanner.sdk.camera.CameraBarcodeScanView
        android:id="@+id/cameraScanView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:forceCameraApiVersion="Auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxDistortionRatio="0.3"
        app:minResolutionY="720"
        app:maxResolutionY="1080"
        app:previewRatioMode="fillWithCrop"
        app:readerMode="Auto"
        app:storePreferredResolution="false"
        app:targetColorActive="@color/colorRed"
        app:targetColorPaused="@color/defaultItemColor"
        app:targetIsFixed="false"
        app:targetStrokeWidth="5"
        app:useAdaptiveResolution="true" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCameraLastScan"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="12dp">

        <TextView
            android:id="@+id/scannerTextLastScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="10sp"
            android:ellipsize="marquee"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/activity_scan_barcode_value_placeholder"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/scannerCardScannerStatus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/scannerProviderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
                app:layout_constraintTop_toBottomOf="@+id/scannerCardLastScan"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/scannerProviderStatusCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                app:cardBackgroundColor="@color/cardBackgroundDone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scannerProviderText">

                <TextView
                    android:id="@+id/scannerProviderStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
                    app:layout_constraintTop_toBottomOf="@+id/scannerCardLastScan"/>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:text="@string/open_link"
        android:visibility="gone"
        app:icon="@drawable/open_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardCameraLastScan" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scannerFlashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:srcCompat="@drawable/lightbulb_off"
        app:fabCustomSize="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardCameraLastScan"
        android:contentDescription="@string/fab_flashlight" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scannerBtProviderLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:srcCompat="@drawable/info"
        app:fabCustomSize="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scannerFlashlight"
        android:contentDescription="@string/fab_provider_logs" />

    <TextView
        android:id="@+id/scannerZxingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_scan_use_zxing"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/text_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintRight_toLeftOf="@id/scannerSwitchZxing"
        app:layout_constraintBottom_toBottomOf="@id/scannerSwitchZxing" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/scannerSwitchZxing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:thumbIcon="@drawable/camera2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scannerSwitchPause" />

    <TextView
        android:id="@+id/scannerPauseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_scan_pause_camera"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/text_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintRight_toLeftOf="@id/scannerSwitchPause"
        app:layout_constraintBottom_toBottomOf="@id/scannerSwitchPause" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/scannerSwitchPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:thumbIcon="@drawable/pause_fill"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scannerCardScannerStatus" />
</androidx.constraintlayout.widget.ConstraintLayout>
